--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,20 @@
-*{
+/* *{
     outline: 1px solid black;
+} */
+
+.projectCard{
+    margin: 2em;
+    padding: 1em;
+    outline: 3px solid navy;
+    border-radius: 1.2em;
+    /* text-align: center; */
+    
+}
+
+.toDoCard{
+    margin: 2em auto;
+    padding: 1em;
+    outline: 3px solid maroon;
+    border-radius: 1.2em;
+    width: 30em;
 }
