--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,6 @@
     padding: 1em;
     outline: 3px solid navy;
     border-radius: 1.2em;
-    /* text-align: center; */
     
 }
 
@@ -17,4 +16,8 @@
     outline: 3px solid maroon;
     border-radius: 1.2em;
     width: 30em;
+}
+
+#modalContent>*{
+    display: block;
 }
